--- a/src/components/styles/SocialIcons.css
+++ b/src/components/styles/SocialIcons.css
@@ -91,14 +91,15 @@ div.resume-button span {
     font-size: 28px;
   }
 }
-@media only screen and (min-width: 768px) {
-  .resume-button {
-    transform: none;
-    font-size: 20px;
-    line-height: 20px;
-  }
+@media only screen and (max-width: 768px) {
   div.resume-button span {
     font-size: 23px;
     margin-top: -1.5px;
+  }
+}
+@media only screen and (max-width: 767px) {
+  .social-icons,
+  .resume-button {
+    display: none;
   }
 }
